test/types/tuple/ferguson/error-bounds.good
error-bounds.chpl:3: error: tuple index 2 is out of bounds
error-bounds.chpl:3: note: this tuple contains elements 0..1 (inclusive)
